Fix Staff Page Grid Margin on Mobile
Mini fix for MAYF-47.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -370,6 +370,12 @@ li.media {
 	}
 }
 
+@media screen and (max-width: $breakpoint-bs-sm) {
+	.staff-details-grid-top.top-spacing15 {
+		margin-top: 0;
+	}
+}
+
 @media screen and (max-width: $breakpoint-bs-md) {
 	.col-md-4.staff-details-col:first-child, .col-md-4.staff-details-col:first-child + .col-md-4.staff-details-col  {
 		margin-bottom: 1em;
